--- a/style.css
+++ b/style.css
@@ -647,3 +647,25 @@ body {
     display: none;
   }
 }
+
+/* scroll back to top button :- copied from w3school website */
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: hsl(var(--soft-red)); /* Set a background color */
+  color: hsl(var(--yellow)); /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 3rem; /* Increase font size */
+  font-weight: 900;
+}
+
+#myBtn:hover {
+  background-color: rgb(231, 80, 63); /* Add a dark-grey background on hover */
+}
